# hello-word-rust-lambda

./: .gitignore  Cargo.toml  README.md  deploy.sh
.github/: dependabot.yml
src/: main.rs
