[package]
name = "register-on-upload"
version = "0.1.0"
authors = ["Darren Meehan <hi@drn.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lambda = { version = "0.2.1", package = "lambda_runtime" }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
serde_json = "1.0.52"
tokio = { version = "0.2", features = ["full"] }
lambda_runtime_client = "0.2.2"
serde_derive = "1.0.106"
serde = "1.0.106"
