[package]
name = "register-on-upload"
version = "0.1.0"
authors = ["Darren Meehan <hi@drn.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lambda = { version = "0.2.1", package = "lambda_runtime" }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
serde_json = "1.0.61"
tokio = { version = "0.2", features = ["full"] }
lambda_runtime_client = "0.2.2"
serde_derive = "1.0.106"
serde = "1.0.111"
rusoto = "0.24.2"
rusoto_dynamodb = "0.43.0"
rusoto_core = "0.44.0"
simple_logger = "1.6.0"
log = "0.4.8"
#  FIXME causing version conflicts
# tracing-honeycomb = { git = "https://github.com/inanna-malick/tracing-honeycomb/", branch = "v2-rain" }
